actually starting to make things

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -1,11 +1,10 @@
 @import './base.css';
+@import './navigation.css';
 
 body {
   display: flex;
-  align-items: center;
   justify-content: center;
   overflow: hidden;
-  background-image: url('./wavy-lines.svg');
   background-size: cover;
   user-select: none;
 }
@@ -29,7 +28,6 @@ code {
 #root {
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
   margin-bottom: 80px;
 }
