there is now working things that dont actually work

--- a/src/renderer/src/assets/css/navigation.css
+++ b/src/renderer/src/assets/css/navigation.css
@@ -1,5 +1,7 @@
 .navigation {
   vertical-align: top;
+  position: sticky;
+  top: 0;
   align-items: center;
   margin-top: 10px;
   margin-bottom: 10px;
