it still doesnt work >:C

--- a/window.ui
+++ b/window.ui
@@ -17,9 +17,9 @@
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>160</x>
       <y>0</y>
-      <width>521</width>
+      <width>421</width>
       <height>80</height>
      </rect>
     </property>
@@ -50,28 +50,22 @@
    <widget class="QPushButton" name="testButton">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>60</y>
+      <x>330</x>
+      <y>70</y>
       <width>98</width>
       <height>26</height>
      </rect>
     </property>
     <property name="text">
-     <string>test</string>
-    </property>
-    <property name="checkable">
-     <bool>false</bool>
-    </property>
-    <property name="flat">
-     <bool>false</bool>
+     <string>PushButton</string>
     </property>
    </widget>
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>179</x>
-      <y>149</y>
-      <width>461</width>
+      <x>150</x>
+      <y>160</y>
+      <width>441</width>
       <height>311</height>
      </rect>
     </property>
@@ -84,10 +78,10 @@
     <widget class="QWidget" name="gridLayoutWidget">
      <property name="geometry">
       <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>441</width>
-       <height>301</height>
+       <x>9</x>
+       <y>9</y>
+       <width>421</width>
+       <height>291</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout"/>
