--- a/resources.qrc
+++ b/resources.qrc
@@ -95,7 +95,7 @@
         <file alias="FreedomBlues.png">assets/discs/FreedomBlues.png</file>
         <file alias="HormonePunk.png">assets/discs/HormonePunk.png</file>
         <file alias="InfernoMetal.png">assets/discs/InfernoMetal.png</file>
-        <file alias="KingOfTheSummit.png">assets/discs/KingOfTheSummit.png</file>
+        <file alias="KingoftheSummit.png">assets/discs/KingoftheSummit.png</file>
         <file alias="MoonlightLullaby.png">assets/discs/MoonlightLullaby.png</file>
         <file alias="PhaethonsMelody.png">assets/discs/PhaethonsMelody.png</file>
         <file alias="PolarMetal.png">assets/discs/PolarMetal.png</file>
